--- a/level 6/home/index1.html
+++ b/level 6/home/index1.html
@@ -11,3 +11,5 @@
 <img src="image/palm.jpg" alt="image not found" width="300" height="200">
 <h6>this is sixth</h6>
 <img src="image/imagew.jpg" alt="image not found" width="300" height="200">
+
+<button>click here to see more</button>
