--- a/level 27/home/contact.html
+++ b/level 27/home/contact.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        button {
+            background-color: ghostwhite;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +24,7 @@
         </nav>
 
 
-        <h2>მე მიყვარს პროგრამირება და ფეხბურთი და არ მიყვარს junk food</h2>
+        <button>click here to see more</button>
     </body>
 
 </html>
