--- a/level 47/home/index.html
+++ b/level 47/home/index.html
@@ -13,16 +13,14 @@
 <body>
     <main>
         <section id="logo-div">
-            <svg xmlns="http://www.w3.org/2000/svg" width="264" height="49pt" viewBox="0 0 198 49">
-                <g fill="#fff">
-            </svg>
+            <img src="./huddle-landing-page-with-single-introductory-section-master/images/logo.svg" alt="logo image">
         </section>
         <section id="main-section">
             <div>
                 <img src="../home/huddle-landing-page-with-single-introductory-section-master/images/illustration-mockups.svg"
                     lt="" class="double_pc">
             </div>
-            <svg width="709" height="506" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <svg  width="709" height="506" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             </svg>
             <div id="content-div">
                 <h1>Build The Community Your Fans Will Love</h1>
@@ -30,7 +28,7 @@
                     Create connections with <br /> your users as you engage in genuine discussion.</p>
                 <button>Register</button>
             </div>
-            <img src="../home/huddle-landing-page-with-single-introductory-section-master/images/bg-desktop.svg" alt="">
+            <img  id="bg-image" src="../home/huddle-landing-page-with-single-introductory-section-master/images/bg-desktop.svg" alt="">
         </section>
         <section id="icons-section">
             <div class="icon-div">
