--- a/level 17/class/index1.html
+++ b/level 17/class/index1.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-    <form> <label for="name">enter name</label> <br>
+    <form> <label for="name">enter name</label>
         <input type="text" id="name">
     </form>
-    <form> <label for="surname">enter surname</label> <br>
-        <input type="text" id="surname">
+    <form> <label for="date">enter datetime</label>
+        <input type="datetime" id="datetime">
     </form>
-    <form> <label for="email">enter email</label> <br>
+    <form> <label for="email">enter email</label>
         <input type="email" id="email">
     </form>
-    <form> <label for="password">enter password</label> <br>
+    <form> <label for="password">enter password</label>
         <input type="password" id="password">
     </form>
 </body>
