--- a/level 19/home/index2.html
+++ b/level 19/home/index2.html
@@ -10,7 +10,7 @@
 <body>
     <form><label for="footballers">footballers</label>
         <select name="footballers" id="footballers">
-            <option value="cr7">cr7</option>]
+            <option value="cr7">cr7</option>
             <option value="messi">messi</option>
             <option value="neymar">neymar</option>
         </select>
