--- a/level 69/home/index.html
+++ b/level 69/home/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="myp"></p>
+    <p id="time"></p>
     <script src="script.js"></script>
 </body>
 </html>
